--- a/themes/openemr/layouts/partials/header.html
+++ b/themes/openemr/layouts/partials/header.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i,700,700i|IBM+Plex+Sans+Condensed|IBM+Plex+Sans:200,200i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet"> 
 <link href="{{ "fonts/cooper_hewitt/cooper_hewitt.css" | absURL }}" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="{{ .Site.BaseURL }}style.css?v=G6iPNTDY">
+<link rel="stylesheet" href="{{ "main.a0e02fafabf9cee63bdb.css" | absURL }}">
 
 {{- if .RSSLink -}}
 <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml">
@@ -33,4 +33,4 @@
 <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=pgq70jawxe">
 <meta name="theme-color" content="#2d9bd6">
 
-<script src="{{ .Site.BaseURL }}bundle.js"></script>
+<script src="{{ "main.js" | absURL }}"></script>
