--- a/themes/openemr/layouts/partials/footer.html
+++ b/themes/openemr/layouts/partials/footer.html
@@ -7,7 +7,7 @@
           <span class="sr-only">OpenEMR</span>
         </a>
       </div>
-      <div class="col-xs-12 col-sm-4 col-md-3">
+      <div class="col-xs-12 col-sm-4 col-md-2">
         <h5 class="title nowiki">Main Project Links</h5>
         <ul class="list-unstyled">
           <li><a href="/wiki/index.php/OpenEMR_Features">Features</a></li>
@@ -19,7 +19,7 @@
           <li><a href="/wiki/index.php/OpenEMR_Support_Guide">Support</a></li>
         </ul>
       </div>
-      <div class="col-xs-12 col-sm-4 col-md-3">
+      <div class="col-xs-12 col-sm-4 col-md-2">
         <h5 class="title nowiki">Help & Support Links</h5>
         <ul class="list-unstyled">
           <li><a href="/wiki/index.php/FAQ">FAQs</a></li>
@@ -31,7 +31,7 @@
           <li><a href="/wiki/index.php/OpenEMR_Acknowledgments">Acknowledgements</a></li>
         </ul>
       </div>
-      <div class="col-xs-12 col-sm-4 col-md-3">
+      <div class="col-xs-12 col-sm-4 col-md-2">
         <!-- TODO: replace `&nbsp;` nesting solution with something more elegant -->
         <!-- TODO: map inactive roots (e.x.: `Main Repository`) use a p tag -->
         <h5 class="title nowiki">Developer Links</h5>
@@ -70,12 +70,11 @@
   </div>
   <div class="row">
     <div class="col text-center">
-      <small>
+      <p>
+      <small style="line-height: 1em;">
         <a href="//www.iubenda.com/privacy-policy/54578274" class="iubenda-nostyle no-brand iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script> | Copyright 2018 OEMR
         <br>
-        Many of the icons used on the homepage are from
-        <a href="https://www.flaticon.com">www.flaticon.com</a> and are licensed
-        by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.
+        Many of the icons used on the homepage are from <a href="https://www.flaticon.com">www.flaticon.com</a> and are licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.
         <br>
         Icon authors include:
         <a href="https://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a>,
@@ -85,6 +84,7 @@
         <a href="https://www.flaticon.com/authors/anhgreen" title="AnhGreen">AnhGreen</a>,
         <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a>
       </small>
+      </p>
     </div>
   </div>
 </div>
