--- a/themes/openemr/src/scss/_jumbotron.scss
+++ b/themes/openemr/src/scss/_jumbotron.scss
@@ -1,4 +1,111 @@
+.billboard {
+    @extend .container-fluid;
+
+    @include media-breakpoint-down(sm) {
+        &:before {
+            content: "";
+            position: relative;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            background-color: rgba(0,0,0,0.5);
+        }
+    }
+
+    @include media-breakpoint-up(lg) {
+        min-height: 100vh;
+    }
+
+    background-color: color("primary");
+    background-repeat: no-repeat;
+    background-position: top center;
+    -webkit-webkit-background-size: cover;
+    -moz-webkit-background-size: cover;
+    -ms-webkit-background-size: cover;
+    -o-webkit-background-size: cover;
+    background-size: cover;
+
+    &__home {
+        padding-top: 100px;
+
+        .content {
+            max-width: 1280px;
+            @include make-container();
+
+            color: $white;
+
+            h3.display-1 {
+                font-size: 3rem;
+
+                @include media-breakpoint-down(md) {
+                    font-size: 1.75rem;
+                }
+
+                @include media-breakpoint-only(lg) {
+                    font-size: 2.25rem;
+                }
+            }
+
+            a.newsletter_signup {
+                background-color: rgba(255,255,255,0.5);
+                @extend .mt-3;
+                @extend .mb-3;
+            }
+
+            .target_nav {
+                .card {
+                    @extend .text-white;
+                    @extend .text-left;
+                    @extend .bg-primary;
+                    //background-color: rgba(46, 155, 214, 0.40) !important;
+                    background-color: rgba(255, 255, 255, 0.20) !important;
+                    transition: background-color 0.25s;
+
+                    h4 {
+                        margin-bottom: 0;
+                    }
+
+                    &.donation {
+                        background-color: rgba(255, 26, 47, 0.8) !important;
+
+                        &:hover {
+                            background-color: rgb(255, 26, 46) !important;
+                        }
+                    }
+
+                    &:hover {
+                        @include transition(0.25s);
+                        background-color: rgb(46, 155, 214) !important;
+                    }
+                    a {
+                        color: $white;
+                        &:hover {
+                            text-decoration: none;
+                        }
+                    }
+                    .card-body {
+                        img {
+                            padding-bottom: 1rem;
+                        }
+                    }
+                }
+            }
+
+            .description {
+                p.lead {
+                    @extend .pt-3;
+                    font-weight: 400;
+                    line-height: 1.45rem;
+                }
+            }
+
+        }
+    }
+}
+
 .home-billboard {
+    padding-top: 100px;
     padding-bottom: 4rem;
     color: $white;
     min-height: 100vh;
@@ -12,6 +119,8 @@
         // background-color: $gray !important;
     }
     .jumbotron {
+        width: 1400px;
+        margin: 0px auto;
         padding-top: 100px;
         @include media-breakpoint-up(md) {
             padding-top: 10rem;
@@ -21,6 +130,7 @@
         .display-1 {
             text-shadow: 2px 2px 0 $black;
             font-family: $headings-font-family;
+            font-size: 3rem;
 
             @include media-breakpoint-down(md) {
                 font-size: 1.75rem;
@@ -41,11 +151,17 @@
             @extend .row;
             .card {
                 @extend .text-white;
-                @extend .text-center;
+                // @extend .text-center;
+                @extend .text-left;
                 @extend .bg-primary;
-                border-radius: 20px;
-                background-color: rgba(46, 155, 214, 0.40) !important;
+                // border-radius: 20px;
+                //background-color: rgba(46, 155, 214, 0.40) !important;
+                background-color: rgba(255, 255, 255, 0.20) !important;
                 transition: background-color 0.25s;
+
+                h4 {
+                    margin-bottom: 0;
+                }
 
                 &.donation {
                     background-color: rgba(255, 26, 47, 0.8) !important;
