--- a/themes/openemr/assets/scss/_imports.scss
+++ b/themes/openemr/assets/scss/_imports.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/bootstrap";
 @import "mixins";
 @import "variables";
 @import "type";
