--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -82,11 +82,7 @@
   </section>
 </div>
 
-<div class="parallax-container">
-  <div class="parallax">
-    <img src="{{ .Site.BaseURL }}img/stethoscope.jpg">
-  </div>
-</div>
+<div class="parallax-container" data-parallax="scroll" data-image-src="{{ "img/stethoscope.jpg" | absURL }}"></div>
 
 <div class="main-content container-fluid">
 
@@ -103,10 +99,9 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}img/calendar.svg" alt="Card image cap">
+        <img class="card-img-top" src="{{ .Site.BaseURL }}img/calendar.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Scheduling</h4>
-          <hr>
           <p class="card-text">
             Advanced scheduling allows clinics to create repeating
             events, automated-workflows triggered by check-in,
@@ -117,10 +112,9 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}img/prescription.svg" alt="Card image cap">
+        <img class="card-img-top" src="{{ .Site.BaseURL }}img/prescription.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">e-Prescribing</h4>
-          <hr>
           <p class="card-text">
             Enter a prescription into an encounter and have it
             electronically sent to the patient's pharmacy.
@@ -130,10 +124,9 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}img/invoice.svg" alt="Card image cap">
+        <img class="card-img-top" src="{{ .Site.BaseURL }}img/invoice.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Medical Billing</h4>
-          <hr>
           <p class="card-text">
             Integrated billing supporting HIPAA ASC X12 Version 5010 Transaction and Code Set Standards.
           </p>
@@ -142,10 +135,9 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}img/medical-report.svg" alt="Card image cap">
+        <img class="card-img-top" src="{{ .Site.BaseURL }}img/medical-report.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">CMS Reporting</h4>
-          <hr>
           <p class="card-text">
             Generate CMS Meaningful Use reports with just a few
             clicks
@@ -155,10 +147,9 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}img/vaccine.svg" alt="Card image cap">
+        <img class="card-img-top" src="{{ .Site.BaseURL }}img/vaccine.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Lab Integration</h4>
-          <hr>
           <p class="card-text">
             Have lab orders automatically sent to a lab and
             integrate the results into a patient's chart
@@ -169,10 +160,9 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}img/flowchart.svg" alt="Card image cap">
+        <img class="card-img-top" src="{{ .Site.BaseURL }}img/flowchart.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Clinical Decision Rules</h4>
-          <hr>
           <p class="card-text">
             Navigate complex patient algorithms using the
             clinical decision rules engine to ensure the highest
@@ -183,10 +173,9 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}img/padlock.svg" alt="Card image cap">
+        <img class="card-img-top" src="{{ .Site.BaseURL }}img/padlock.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Advanced Security</h4>
-          <hr>
           <p class="card-text">
             HIPAA-friendly, fine-grained access control objects,
             and industry-standard password hashing helps to
@@ -197,10 +186,9 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}img/earth.svg" alt="Card image cap">
+        <img class="card-img-top" src="{{ .Site.BaseURL }}img/earth.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Multilingual Support</h4>
-          <hr>
           <p class="card-text">
             Available in over 30 languages, and customizable to
             add more.
@@ -211,11 +199,7 @@
   </section>
 </div>
 
-<div class="parallax-container">
-  <div class="parallax">
-    <img src="{{ .Site.BaseURL }}img/hospital.jpg">
-  </div>
-</div>
+<div class="parallax-container" data-parallax="scroll" data-image-src="{{ "img/hospital.jpg" | absURL }}"></div>
 
 <div class="main-content">
   <section>
@@ -236,21 +220,13 @@
   </section>
 </div>
 
-<div class="parallax-container">
-  <div class="parallax">
-    <img src="{{ .Site.BaseURL }}img/md-with-ipad.jpg" alt="">
-  </div>
-</div>
+<div class="parallax-container" data-parallax="scroll" data-image-src="{{ "img/md-with-ipad.jpg" | absURL }}"></div>
 
 <div class="main-content">
   {{ partial "help-needed.html" . }}
 </div>
 
-<div class="parallax-container">
-  <div class="parallax">
-    <img src="{{ .Site.BaseURL }}img/screen.jpg" alt="">
-  </div>
-</div>
+<div class="parallax-container" data-parallax="scroll" data-image-src="{{ "img/screen.jpg" | absURL }}"></div>
 
 <div class="main-content">
   <section class="deploy">
