Giving tuesday landing page (#26)
* Setting up /give as a landing page

* Giving Tuesday page

* Reduce filesize of photo

--- a/themes/openemr/assets/scss/_imports.scss
+++ b/themes/openemr/assets/scss/_imports.scss
@@ -1,6 +1,7 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "mixins";
 @import "variables";
+@import "give";
 @import "type";
 @import "colors";
 @import "jumbotron";
