--- a/themes/openemr/assets/scss/_blog.scss
+++ b/themes/openemr/assets/scss/_blog.scss
@@ -1,90 +1,92 @@
 // ALL blog related styles are here, type and colors included
 
 .blog-list {
-    margin-top: 25px;
-    .media {
-        h5 {
-            margin-top: 0 !important;
-            padding-top: 0 !important;
-            margin-bottom: 0 !important;
-            font-weight: 300;
-            &:after {
-                background-color: none;
-                height: 0;
-            }
-        }
-
+  margin-top: 25px;
+  .media {
+    h5 {
+      margin-top: 0 !important;
+      padding-top: 0 !important;
+      margin-bottom: 0 !important;
+      font-weight: 300;
+      &:after {
+        background-color: none;
+        height: 0;
+      }
     }
+
+  }
 }
 
 .post-stub {
-    display: inline-block;
-    overflow: hidden;
-    max-height: 400px;
+  display: inline-block;
+  overflow: hidden;
+  max-height: 400px;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  top: 0;
+
+  a.image-link {
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
-    position: relative;
-    top: 0;
+    display: block;
 
-    a.image-link {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        display: block;
-
-        &:hover {
-            &::before {
-                background-color: transparent;
-            }
-        }
+    &:hover {
+      &::before {
+        background-color: transparent;
+      }
+    }
 
         // Darken the image by default
         &::before {
-            background-color: rgba(0,0,0, 0.20);
-            content: "";
-            display: block;
-            height: 100%;
-            left: 0;
-            position: absolute;
-            top: 0;
-            width: 100%;
-            z-index: 2;
+          background-color: rgba(0,0,0, 0.20);
+          content: "";
+          display: block;
+          height: 100%;
+          left: 0;
+          position: absolute;
+          top: 0;
+          width: 100%;
+          z-index: 2;
 
             // For hover transition
             -webkit-transition: background-color .15s ease-out;
             -moz-transition: background-color .15s ease-out;
             transition: background-color .15s ease-out;
-        }
+          }
 
         // Add a gradient to ensure readability of title
         .image-gradient {
-            @include linear-gradient(rgba(255,255,255,0), 0%, rgba(0,0,0,0.75), 100%);
-            display: block;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            height: 60%;
-            width: 100%;
-            z-index: 3;
+          $from: rgba(0,0,0,0.65);
+          $to: rgba(0,0,0,0);
+          @include linear-gradient(to top, $from, $to);
+          display: block;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          height: 60%;
+          width: 100%;
+          z-index: 3;
         }
 
         img {
-            @extend .img-fluid;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
+          @extend .img-fluid;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
         }
-    }
+      }
 
-    .title-link {
-        
+      .title-link {
+
         a {
-            text-decoration: none;
+          text-decoration: none;
 
-            h5 {
-                color: $white !important;
-            }
+          h5 {
+            color: $white !important;
+          }
         }
         
         position: absolute;
@@ -92,56 +94,56 @@
         left: 0;
         padding: 15px;
         z-index: 5;
+      }
     }
-}
 
-.blog .standard {
-    header h1 {
+    .blog .standard {
+      header h1 {
         font-weight: 300;
         color: $black;
+      }
     }
-}
 
-article.post-container {
-    @include make-col(9);
-}
+    article.post-container {
+      @include make-col(9);
+    }
 
-section.sidebar {
-    @include make-col(3);
-}
+    section.sidebar {
+      @include make-col(3);
+    }
 
-.center-row {
-    @include make-row();
-    @extend .justify-content-center;
-}
+    .center-row {
+      @include make-row();
+      @extend .justify-content-center;
+    }
 
-.post-header {
-    @include center-column();
-    @extend .text-center;
-    @extend .my-5;
+    .post-header {
+      @include center-column();
+      @extend .text-center;
+      @extend .my-5;
 
-    h1 {
+      h1 {
         color: $white;
+      }
     }
-}
-.cover {
-    @extend .align-items-center;
+    .cover {
+      @extend .align-items-center;
 
-    @include media-breakpoint-down(md) {
+      @include media-breakpoint-down(md) {
         margin-bottom: 0 !important;
-    }
+      }
 
-    @include media-breakpoint-up(md) {
+      @include media-breakpoint-up(md) {
         height: 375px;
-    }
-    @extend .mb-3;
+      }
+      @extend .mb-3;
 
-    color: $white;
-    position: relative;
-    background-position: 50% 50%;
-    background-size: cover;
+      color: $white;
+      position: relative;
+      background-position: 50% 50%;
+      background-size: cover;
 
-    &::before {
+      &::before {
         display: block;
         content: "";
         position: absolute;
@@ -151,73 +153,73 @@ section.sidebar {
         height: 100%;
         background-color: rgba(0,0,0,0.55);
         z-index: 0;
-    }
+      }
 
-    header.post-header {
+      header.post-header {
         @include center-column();
         @extend .justify-content-start;
         @extend .align-middle;
         z-index: 2;
 
         h1 {
-            @include media-breakpoint-down(md) {
-                font-size: 1.75rem;
-            }
-            @extend .d-block;
-            text-align: left;
-            font-size: 2.25rem;
-            font-weight: 300;
+          @include media-breakpoint-down(md) {
+            font-size: 1.75rem;
+          }
+          @extend .d-block;
+          text-align: left;
+          font-size: 2.25rem;
+          font-weight: 300;
         }
-    }
+      }
 
-    & &__image{
+      & &__image{
         img {
-            display: none;
+          display: none;
             // display: table-cell;
             // vertical-align: middle;
-        }
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 425px;
-        overflow: hidden;
+          }
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 425px;
+          overflow: hidden;
 
-        img {
+          img {
             width: 100%;
+          }
         }
-    }
-}
+      }
 
-img.featured {
-    @extend .img-fluid;
-}
-
-.post-meta {
-    @include center-column();
-    @extend .mb-3;
-    @extend .text-muted;
-    font-size: $font-size-sm;
-}
-
-.post-content {
-    @include center-column();
-
-    h1, h2, h3, h4, h5, h6 {
-        padding: 0 !important;
-        margin: 0 !important;
-    }
-
-    img:not(.floating) {
+      img.featured {
         @extend .img-fluid;
-    }
-}
+      }
 
-.post-footer {
-    @extend .col-6;
-    @extend .mb-5;
-}
+      .post-meta {
+        @include center-column();
+        @extend .mb-3;
+        @extend .text-muted;
+        font-size: $font-size-sm;
+      }
 
-.comments {
-    @include center-column();
-}
+      .post-content {
+        @include center-column();
+
+        h1, h2, h3, h4, h5, h6 {
+          padding: 0 !important;
+          margin: 0 !important;
+        }
+
+        img:not(.floating) {
+          @extend .img-fluid;
+        }
+      }
+
+      .post-footer {
+        @extend .col-6;
+        @extend .mb-5;
+      }
+
+      .comments {
+        @include center-column();
+      }
