--- a/themes/openemr/assets/scss/_give.scss
+++ b/themes/openemr/assets/scss/_give.scss
@@ -16,12 +16,20 @@
 
     padding-top: 130px;
 
+    @include media-breakpoint-down(sm) {
+      background-image: none !important;
+      background-color: theme-color('primary') !important;
+    }
+
     color: $white;
     font-size: 20px;
 
     h1.display-1 {
+      @include media-breakpoint-up(lg) {
+        font-size: 6rem;
+      }
+
       color: $white;
-      font-size: 6rem;
       font-family: 'Sheila';
       font-weight: 700;
     }
