--- a/themes/openemr/layouts/_default/page.html
+++ b/themes/openemr/layouts/_default/page.html
@@ -7,23 +7,24 @@
         {{ $titlePush := $.Param "titlePush" }}
     
         {{ if eq $smallCover true }}
-        <section class="hero container">
-            <div class="row">
-                <div class="col-sm-10">
-                    <img src="{{ $.Param "cover" | absURL }}" height="350" alt="">
-                    {{ if eq $titleOnCover true }}
-                        {{ if eq $titlePush "center"}}
-                        <h1 class="text-center">{{ .Title }}</h1>
-                        {{ else if eq $titlePush "right"}}
-                        <h1 class="text-right">{{ .Title }}</h1>
-                        {{ else }}
-                        <h1>{{ .Title }}</h1>
+            <section class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <img src="{{ $.Param "cover" | absURL }}" class="mx-auto d-block" alt="">
+                        <div class="clearfix"></div>
+                        {{ if eq $titleOnCover true }}
+                            {{ if eq $titlePush "center"}}
+                            <h1 class="text-center">{{ .Title }}</h1>
+                            {{ else if eq $titlePush "right"}}
+                            <h1 class="text-right">{{ .Title }}</h1>
+                            {{ else }}
+                            <h1>{{ .Title }}</h1>
+                            {{ end }}
                         {{ end }}
-                    {{ end }}
+                    </div>
                 </div>
-            </div>
         {{ else }}
-        <section class="hero full container-fluid" style="background-image: url('{{ $.Param "cover" | absURL}}');">
+            <section class="hero full container-fluid" style="background-image: url('{{ $.Param "cover" | absURL}}');">
         {{ end }}
         </section>
     {{ end }}
