Closes #1. Updates Paypal and OC links

--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -11,7 +11,7 @@
               Free, Always and Forever.<br>
               ONC Complete EHR Certified.<br>
             </h3>
-            <p class="lead pt-3">OpenEMR is the most popular open source electronic health records and medical practice management solution. ONC certified with international usage, OpenEMR's goal is a superior alternative to its proprietary counterparts. With passionate volunteers and contributors dedicated to guarding OpenEMR's status as a free, open source software solution for medical practices with a commitment to openness, kindness and cooperation.</p>
+            <p class="lead pt-3">OpenEMR is the most popular open source electronic health records and medical practice management solution. 2014 ONC certified with international usage, OpenEMR's goal is a superior alternative to its proprietary counterparts. With passionate volunteers and contributors dedicated to guarding OpenEMR's status as a free, open source software solution for medical practices with a commitment to openness, kindness and cooperation.</p>
           </div>
           <div class="target_nav col-sm-12 col-md-12 col-lg-5 pb-3 card-holders">
             <div class="card mb-1 d-none d-xl-flex">
