website updates and chat change to slack chat

--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -23,7 +23,7 @@
               </a>
             </div>  <!-- end card -->
             <div class="card mb-1">
-              <a href="/wiki/index.php/Support">
+              <a href="{{ "support" | absURL }}">
                 <div class="card-body">
                   <img class="img-fluid float-left mr-4" src="{{ .Site.BaseURL }}img/info.png" alt="Card image cap" height="64" width="64">
                   <h4 class="card-title">Find Support</h4>
