--- a/themes/openemr/layouts/partials/footer.html
+++ b/themes/openemr/layouts/partials/footer.html
@@ -14,9 +14,11 @@
           <li><a href="/demo">Demo</a></li>
           <li><a href="/wiki/index.php/OpenEMR_Downloads">Download</a></li>
           <li><a href="/blog">Blog</a></li>
-          <li><a href="/wiki">Wiki</a></li>
+          <li><a href="/wiki">Docs</a></li>
           <li><a href="https://community.open-emr.org/">Forum</a></li>
-          <li><a href="/wiki/index.php/OpenEMR_Support_Guide">Support</a></li>
+          <li><a href="/chat">Chat</a></li>
+          <li><a href="/donate">Donate</a></li>
+          <li><a href="/support">Support</a></li>
         </ul>
       </div>
       <div class="col-xs-12 col-sm-4 col-md-2">
@@ -25,7 +27,7 @@
           <li><a href="/wiki/index.php/FAQ">FAQs</a></li>
           <li><a href="https://community.open-emr.org/">Forum</a></li>
           <li><a href="/wiki/index.php/OpenEMR_Wiki_Home_Page#User_Manuals">User Manuals</a></li>
-          <li><a href="/wiki/index.php/OpenEMR_Wiki_Home_Page#Support">Support Guide</a></li>
+          <li><a href="/support">Support Guide</a></li>
           <li><a href="/wiki/index.php/OpenEMR_Professional_Support">Professional Support</a></li>
           <li><a href="/wiki/index.php/OpenEMR_Wiki_Home_Page#ONC_Ambulatory_EHR_Certification">Certification</a></li>
           <li><a href="/wiki/index.php/OpenEMR_Acknowledgments">Acknowledgements</a></li>
@@ -48,23 +50,9 @@
           </li>
           <li>
             <a href="http://github.com/openemr/openemr">
-              <i class="fa fa-github fa-fw fa-lg"></i>&nbsp;Github&nbsp;(main)
+              <i class="fa fa-github fa-fw fa-lg"></i>&nbsp;Github
             </a>
           </li>
-          <a href="http://bitbucket.org/openemr/openemr">
-            <i class="fa fa-code-fork fa-fw fa-lg"></i>&nbsp;Bitbucket&nbsp;(mirror)
-          </a>
-        </li>
-        <li>
-          <a href="http://www.assembla.com/spaces/openemr/">
-            <i class="fa fa-code-fork fa-fw fa-lg"></i>&nbsp;Assembla&nbsp;(mirror)
-          </a>
-        </li>
-        <li>
-          <a href="http://repo.or.cz/w/openemr.git">
-            <i class="fa fa-code-fork fa-fw fa-lg"></i>&nbsp;Repo.or.cz&nbsp;(mirror)
-          </a>
-        </li>
       </ul>
     </div>
   </div>
@@ -72,7 +60,7 @@
     <div class="col text-center">
       <p>
       <small style="line-height: 1em;">
-        <a href="//www.iubenda.com/privacy-policy/54578274" class="iubenda-nostyle no-brand iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script> | Copyright 2019 OpenEMR Foundation, Inc.
+        <a href="//www.iubenda.com/privacy-policy/54578274" class="iubenda-nostyle no-brand iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script> | Copyright 2020 OpenEMR Foundation, Inc.
         <br>
         Many of the icons used on the homepage are from <a href="https://www.flaticon.com">www.flaticon.com</a> and are licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.
         <br>
