--- a/themes/openemr/layouts/partials/navigation.html
+++ b/themes/openemr/layouts/partials/navigation.html
@@ -17,7 +17,7 @@
         <li><a href="{{ "blog" | absURL }}">Blog</a></li>
         <li><a href="{{ "wiki" | absURL}}">Docs</a></li>
         <li><a href="https://community.open-emr.org/">Forum</a></li>
-        <li><a href="https://chat.open-emr.org/">Chat</a></li>
+        <li><a href="{{ "chat" | absURL }}">Chat</a></li>
         <li><a href="{{ "donate" | absURL }}">Donate</a></li>
         <li class="nav-item dropdown">
           <a href="" class="nav-link dropdown-toggle" id="supportDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Support</a>
@@ -25,7 +25,7 @@
             <div class="arrow-up"></div>
             <a class="dropdown-item" href="/support">Costs and Support Options</a>
             <a class="dropdown-item" href="https://community.open-emr.org/">Community Support</a>
-            <a class="dropdown-item" href="https://chat.open-emr.org/">Free Basic Live Chat Support</a>
+            <a class="dropdown-item" href="/chat">Free Basic Live Chat Support</a>
             <a class="dropdown-item" href="{{ "/wiki/index.php/Professional_Support" | absURL }}">Professional Support Vendors</a>
             <a class="dropdown-item" href="{{ "/wiki/index.php/OpenEMR_5.0.1_Users_Guide" | absURL }}">How-to Guides</a>
           </div>
