--- a/themes/openemr/layouts/blog/list.html
+++ b/themes/openemr/layouts/blog/list.html
@@ -1,6 +1,9 @@
 {{ define "main" }}
 <main class="blog-list">
-    {{ range .Pages }}
+    {{ range where .Pages "Params.featured" "yes" }}
+        {{ partial "blog/post-stub.html" . }}
+    {{ end }}
+    {{ range where .Pages "Params.featured" "ne" "yes" }}
         {{ partial "blog/post-stub.html" .}}
     {{ end }}
 </main>
