remove 2014 cehrt, update admins, 1 typo

--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -8,9 +8,9 @@
           <div class="col-sm-12 col-lg-7">
             <h3 class="display-1">
               Fully Open-Source.<br>
-              Free, Always and Forever.<br>
+              Free Software, Always and Forever.<br>
             </h3>
-            <p class="lead pt-3">OpenEMR is the most popular open source electronic health records and medical practice management solution. 2014 ONC certified with international usage, OpenEMR's goal is a superior alternative to its proprietary counterparts. With passionate volunteers and contributors dedicated to guarding OpenEMR's status as a free, open source software solution for medical practices with a commitment to openness, kindness and cooperation.</p>
+            <p class="lead pt-3">OpenEMR is the most popular open source electronic health records and medical practice management solution. OpenEMR's goal is a superior alternative to its proprietary counterparts with passionate volunteers and contributors dedicated to guarding OpenEMR's status as a free, open source software solution for medical practices with a commitment to openness, kindness and cooperation.</p>
           </div>
           <div class="target_nav col-sm-12 col-md-12 col-lg-5 pb-3 card-holders">
             <div class="card mb-1 d-none d-xl-flex">
@@ -74,22 +74,6 @@
   </div> <!-- end .row -->
 </section>
 
-<div class="main-content">
-  <section class="onc align-items-center">
-    <div class="col-xs-12 col-lg-5">
-      <img src="{{ .Site.BaseURL }}img/onc_certification_stacked.png" alt="" style="width:100%">
-    </div>
-    <div class="col xs-12 col-lg-7">
-      <h1 class="display-3">Leading the way.<br>Meaningful Use 2 certified</h1>
-      <p class="lead">
-        OpenEMR is an ONC Certified HIT 2014 Edition Complete EHR
-        product. We take pride in being one of the only open-source
-        EHR solutions to provide Meaningful Use certification.
-      </p>
-    </div>
-  </section>
-</div>
-
 <div class="parallax-container" data-parallax="scroll" data-image-src="{{ "img/stethoscope.jpg" | absURL }}"></div>
 
 <div class="main-content container-fluid">
@@ -147,7 +131,7 @@
         <div class="card-body">
           <h4 class="card-title">CMS Reporting</h4>
           <p class="card-text">
-            Generate CMS Meaningful Use reports with just a few
+            Generate reports with just a few
             clicks
           </p>
         </div>
