--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -131,8 +131,7 @@
         <div class="card-body">
           <h4 class="card-title">CMS Reporting</h4>
           <p class="card-text">
-            Generate reports with just a few
-            clicks
+            Generate reports with just a few clicks
           </p>
         </div>
       </div>
